# dg_fsm_whl

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  README.md  model_file.md
config/: Config.h  Control_Parameters.info  Sim_Motor.info  robots_config.h
lcm-types/: file_list.txt  leg_control_cmd_lcmt.lcm  leg_control_data_lcmt.lcm  mpc_lcmt.lcm  planner_lcmt.lcm  quadruped_model_lcmt.lcm  rc_lcmt.lcm  ros_lowcmd_lcmt.lcm  ros_lowstate_lcmt.lcm  sim_ground_truth_lcmt.lcm  state_estimator_lcmt.lcm  usb_command_t.lcm  usb_data_t.lcm  wbc_test_data_lcmt.lcm
lcm-types/cpp/: leg_control_command_lcmt.hpp  leg_control_data_lcmt.hpp  mpc_lcmt.hpp  planner_lcmt.hpp  quadruped_model_lcmt.hpp  rc_lcmt.hpp  ros_lowcmd_lcmt.hpp  ros_lowstate_lcmt.hpp  sim_ground_truth_lcmt.hpp  state_estimator_lcmt.hpp  usb_command_t.hpp  usb_data_t.hpp  wbc_test_data_lcmt.hpp
lcm-types/lcmtypes/: leg_control_command_lcmt.java  leg_control_data_lcmt.java  mpc_lcmt.java  planner_lcmt.java  quadruped_model_lcmt.java  rc_lcmt.java  ros_lowcmd_lcmt.java  ros_lowstate_lcmt.java  sim_ground_truth_lcmt.java  state_estimator_lcmt.java  usb_command_t.java  usb_data_t.java  wbc_test_data_lcmt.java
lcm-types/python/: leg_control_command_lcmt.py  leg_control_data_lcmt.py  mpc_lcmt.py  planner_lcmt.py  quadruped_model_lcmt.py  rc_lcmt.py  ros_lowcmd_lcmt.py  ros_lowstate_lcmt.py  sim_ground_truth_lcmt.py  state_estimator_lcmt.py  usb_command_t.py  usb_data_t.py  wbc_test_data_lcmt.py
lcm_convert/: CMakeLists.txt  lcm_reader.cpp
models/: polic_09161.onnx  policy.onnx  policy_09221929.onnx  policy_09222104.onnx  policy_09251937.onnx  policy_09261543.onnx  policy_09261603.onnx  policy_09261620.onnx  policy_09261655.onnx  policy_09261916.onnx  policy_09261932.onnx  policy_09262037.onnx  policy_09292116.onnx  policy_09292320.onnx  policy_09300032.onnx  policy_09300038.onnx  policy_09300101.onnx  policy_09300114.onnx  policy_09300225.onnx  policy_09300233.onnx  policy_2.onnx  policy_down09251606.onnx  policy_height_1.onnx  policy_height_2.onnx  policy_height_3.onnx  policy_height_4.onnx  policy_height_5.onnx  policy_height_6.onnx  policy_jumping_Jul_17_4250.onnx  policy_leg_exp_11252018.onnx  policy_tty_box_0830_1308.onnx  policy_whl.onnx  policy_whl_1.onnx  policy_whl_1_no_smooth.onnx  rough_policy.onnx
quadruped_share_data/: robot_state_protocols.h
robot/: CMakeLists.txt  HardwareBridge.cpp  HardwareBridge.h
robot/estimators/: Estimator_Base.cpp  Estimator_Base.h  OrientationEsimator.cpp  OrientationEstimator.h  sim_estimator.cpp  sim_estimator.h
robot/hardwares/usb/include/: rt_remote_controller.h  rt_usb2can.h  rt_usb_base.h  rt_usb_imu.h
robot/hardwares/usb/src/: rt_remote_controller.cpp  rt_usb2can.cpp  rt_usb_base.cpp  rt_usb_imu.cpp
robot/leg_controller/: leg_control.cpp  leg_control.h
robot/robot_model/belt/: belt_tor_act.xml  scene.xml  test.xml
robot/robot_model/belt/assets/: fl_abad_link.STL  fl_hip_link.STL  fr_abad_link.STL  rl_abad_link.STL  rl_hip_link.STL  rl_knee_link.STL  rr_abad_link.STL  rr_hip_link.STL  rr_knee_link.STL
robot/robot_model/chaojigou/: chaojigou.xml  scene.xml
robot/robot_model/chaojigou/assets/: fl_abad_link.STL  fl_hip_link.STL  fl_knee_link.STL  fr_abad_link.STL  fr_hip_link.STL  fr_knee_link.STL  rl_abad_link.STL  rl_hip_link.STL  rl_knee_link.STL  rr_abad_link.STL  rr_hip_link.STL  rr_knee_link.STL
robot/robot_model/dg_engineer/: dg_engineer.xml  scene.xml
robot/robot_model/sirius_wheel/: scene.xml  scene_box.xml  scene_rough.xml  sirius_wheel.xml  sirius_wheel_new.xml
robot/robot_model/sirius_wheel/assets/: LF_ABAD_Link.STL  LF_FOOT_Link.STL  LF_SHANK_Link.STL  LF_THIGH_Link.STL  LH_ABAD_Link.STL  LH_FOOT_Link.STL  LH_SHANK_Link.STL  LH_THIGH_Link.STL  RF_ABAD_Link.STL  RF_FOOT_Link.STL  RF_SHANK_Link.STL  RF_THIGH_Link.STL  RH_ABAD_Link.STL  RH_FOOT_Link.STL  RH_SHANK_Link.STL  RH_THIGH_Link.STL  base_link.STL  wheel_Link.STL  wheel_motor.STL
robot/robot_model/unitree_go1/: go1.xml  scene.xml
robot/robot_runner/: Robot_Runner.cpp  Robot_Runner.h
robot/thread_tasks/inc/: thread_rc.h  thread_robot_runner.h  thread_usb_hardware.h
robot/thread_tasks/src/: thread_rc.cpp  thread_robot_runner.cpp  thread_usb_hardware.cpp
robot_ctrl/: CMakeLists.txt  my_controller.cpp  my_controller.h  robot_ctrl_base.h
robot_ctrl/FSM/: Control_FSM.cpp  Control_FSM.h  Control_FSM_Data.h  FSM_State.cpp  FSM_State.h  FSM_State_External_Control.cpp  FSM_State_External_Control.h  FSM_State_RL_Walk.cpp  FSM_State_RL_Walk.h  FSM_State_RL_Walk_2.cpp  FSM_State_RL_Walk_2.h  FSM_State_User_Interface.cpp  FSM_State_User_Interface.h  FSM_State_damping.cpp  FSM_State_damping.h  FSM_State_passive.cpp  FSM_State_passive.h  FSM_State_sit_down.cpp  FSM_State_sit_down.h  FSM_State_stand_up.cpp  FSM_State_stand_up.h
robot_ctrl/rl_controller/: rl_controller.cpp  rl_controller.h  rl_controller_2.cpp  rl_controller_2.h
scripts/: MJDATA.TXT  MJDATA1.txt  MUJOCO_LOG.TXT  Running_Model.txt  find_qt_path.sh  launch_iox_roudi.sh  launch_lcm_spy.sh  launch_real_robot.sh  launch_sim_ctrl.sh  launch_sim_mj.sh  launch_sim_show.sh  mjmodel.xml  my_conf.conf  send_to_slave.sh  test_in_class.txt  testdata.txt
simulator/: CMakeLists.txt  SimulationBridge.cpp  SimulationBridge.h  my_simulator.cpp  my_simulator.h
simulator/include/: array_safety.h
simulator/motor_control/: my_motor_model.cpp  my_motor_model.h
test_repo/: CMakeLists.txt  real_robot_show.cpp  run_robot.cpp  run_robot_ros.cpp  run_sim_ctrl.cpp  start_sim.cpp
utilities/inc/: Interpolation.h  LoadData.h  debug_tools.h  thread_timer.h  utilities_fun.h
utilities/src/: debug_tools.cpp  easylogging++.cc  thread_timer.cpp  utilities_func.cpp
utilities/types/: hardware_types.h
